# Project-GNU-Make-Python

./: .gitignore  Makefile  README.md  help.py  in_file.txt  out.txt  prog.py  pyproject.toml  requirements.txt  tests.py
