[tool.poetry]
name = "live_de_python_#184-gnu_make"
version = "0.1.0"
description = ""
authors = ["marcusmariano <marcusney@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-coverage = "^0.0"
rich = "^12.2.0"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
